# kacgm

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: cardio.yaml  continuous.yaml  discrete.yaml  sachs.yaml  sensitivity.yaml  symbolic_pruning.yaml
data/raw/: cardio.csv
notebooks/: cardio.ipynb  cardio_bootstrap_results.ipynb  sachs_results.ipynb  sachs_results_analysis.ipynb  sensitivity_plot.ipynb
runnables/: __init__.py  run_cardio_bootstrap_evaluation.py  run_cardio_case_study.py  run_continuous_benchmark.py  run_discrete_benchmark.py  run_sachs_benchmark.py  run_sensitivity.py  run_symbolic_pruning_study.py
src/datasets/: __init__.py  cardio.py  sachs.py  synthetic.py
src/models/: __init__.py  dbcm.py  factory.py  flow.py  kan.py
src/plotting/: __init__.py  cardio_formula.py  loaders.py
src/utils/: __init__.py  cardio.py  evaluation.py  hyperparams.py  metrics.py  paths.py  stats.py
tests/: test_cardio_bootstrap.py  test_cardio_dataset.py  test_cardio_formula_plotting.py  test_metrics.py  test_paths.py  test_runnables_smoke.py  test_synthetic_data.py
